force-app/main/default/objects/Cadence_Assignment_Record__c/Cadence_Assignment_Record__c.object-meta.xml
<CustomObject>
    <label>Cadence Assignment Record</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CAR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>