force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>Activity_Log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Log</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>