force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>5 OR (1 AND 2 AND 3) OR (1 AND 4)</booleanFilter>
        <errorMessage>Cadence must be active to use it or active and available for rep use</errorMessage>
        <filterItems>
            <field>Cadence__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Job_Name__c</field>
            <operation>equals</operation>
            <value>Sales Representative</value>
        </filterItems>
        <filterItems>
            <field>Cadence__c.RepAdd__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Job_Name__c</field>
            <operation>notEqual</operation>
            <value>Sales Representative</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Only active Cadences are displayed</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cadence__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>