force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Cadence_Owner__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>