force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Cadence_Started__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadence Started?</label>
    <type>Checkbox</type>
</CustomField>