force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Cadence_Type__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cadence Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>