force-app/main/default/objects/Cadence_Assignment_Record__c/fields/CadenceObject__c.field-meta.xml
<CustomField>
    <fullName>CadenceObject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populate of the ID of the object in this field to setup the entire CAR record.</inlineHelpText>
    <label>CadenceObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>