force-app/main/default/objects/Cadence_Assignment_Record__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <label>Rep Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Bad Lead</fullName>
            </value>
            <value>
                <fullName>Multiple attempts, could not reach</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Duplicate Record/Acquired/Out of Business</fullName>
            </value>
            <value>
                <fullName>Opportunity Created in Touchpoint</fullName>
            </value>
            <value>
                <fullName>Opportunity Created Outside Touchpoint</fullName>
            </value>
            <value>
                <fullName>No Contact Info/Incorrect Contact Info</fullName>
            </value>
            <value>
                <fullName>Out of Segment/Territory</fullName>
            </value>
            <value>
                <fullName>Remove - CPA</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>