force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is there any additional information you&apos;d like to provide about this record?</inlineHelpText>
    <label>Notes To Rep</label>
    <type>TextArea</type>
</CustomField>