force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Destination_Detail__c.field-meta.xml
<CustomField>
    <fullName>Destination_Detail__c</fullName>
    <label>Destination Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to Rep</fullName>
            </value>
            <value>
                <fullName>Assigned to Self</fullName>
            </value>
            <value>
                <fullName>Lockout Prospect Ownership Found</fullName>
            </value>
            <value>
                <fullName>No Rep Chosen</fullName>
            </value>
            <value>
                <fullName>Open Opportunity Found</fullName>
            </value>
            <value>
                <fullName>Prospecting Prospect Ownership Found</fullName>
            </value>
            <value>
                <fullName>Recent Activity Found</fullName>
            </value>
            <value>
                <fullName>Assigned via Segmentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>