force-app/main/default/objects/Cadence_Assignment_Record__c/fields/LatestTouchpoint__c.field-meta.xml
<CustomField>
    <fullName>LatestTouchpoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The latest (or current) touchpoint for this CAR record</inlineHelpText>
    <label>Latest Touchpoint</label>
    <referenceTo>Cadence_Touchpoint__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>