force-app/main/default/objects/Cadence_Assignment_Record__c/fields/LeadCompanyId__c.field-meta.xml
<CustomField>
    <fullName>LeadCompanyId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadCompanyId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>