force-app/main/default/objects/Cadence_Assignment_Record__c/fields/NbrOfTouchpoints__c.field-meta.xml
<CustomField>
    <fullName>NbrOfTouchpoints__c</fullName>
    <inlineHelpText>How many touchpoints does this CAR record have.</inlineHelpText>
    <label>Nbr Of Touchpoints</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>