force-app/main/default/objects/Cadence_Assignment_Record__c/fields/OpportunityCreatedFromCadence__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCreatedFromCadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Created From Cadence</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cars (Opportunity Created From Cadence)</relationshipLabel>
    <relationshipName>Cars1</relationshipName>
    <type>Lookup</type>
</CustomField>