force-app/main/default/objects/Cadence_Assignment_Record__c/fields/OverrideOtherCARs__c.field-meta.xml
<CustomField>
    <fullName>OverrideOtherCARs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked upon creation of a CAR, if there is another CAR of the same cadence/target type, it will close that one to allow this one to be created.</inlineHelpText>
    <label>Override Other CARs</label>
    <type>Checkbox</type>
</CustomField>