force-app/main/default/objects/Cadence_Assignment_Record__c/fields/ParentAccountId__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentAccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>