force-app/main/default/objects/Cadence_Assignment_Record__c/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Processing notes for this CAR record.</inlineHelpText>
    <label>Process Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>