force-app/main/default/objects/Cadence_Assignment_Record__c/fields/ReferralAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Referral Account associated with this CAR record</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>