force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Rep_Closed__c.field-meta.xml
<CustomField>
    <fullName>Rep_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rep Closed</label>
    <type>Checkbox</type>
</CustomField>