force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Sales_Program__c.field-meta.xml
<CustomField>
    <fullName>Sales_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Program</label>
    <length>60</length>
    <type>Text</type>
</CustomField>