force-app/main/default/objects/Cadence_Assignment_Record__c/fields/SendToPartnerFailedId__c.field-meta.xml
<CustomField>
    <fullName>SendToPartnerFailedId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If Send To Partner failed because of the ID of another record, populate the ID here.</inlineHelpText>
    <label>Send To Partner Failed Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>