force-app/main/default/objects/Cadence_Assignment_Record__c/fields/SendToPartnerStatus__c.field-meta.xml
<CustomField>
    <fullName>SendToPartnerStatus__c</fullName>
    <inlineHelpText>What is the status of the Send To Partner Process? If this was not entered in the process, this will be blank.</inlineHelpText>
    <label>Send To Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Assigned To User</fullName>
            </value>
            <value>
                <fullName>Assigned To Queue</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>