force-app/main/default/objects/Cadence_Assignment_Record__c/fields/SendToPartnerStatusDetail__c.field-meta.xml
<CustomField>
    <fullName>SendToPartnerStatusDetail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any extra detail provided with the Status.</inlineHelpText>
    <label>Send To Partner Status Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>