force-app/main/default/objects/Cadence_Assignment_Record__c/fields/SignificantContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SignificantContactEmail__c</fullName>
    <formula>IF(NOT( ISBLANK( LeadId__c )), LeadId__r.Email , ContactId__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignificantContactEmail</label>
    <type>Text</type>
</CustomField>