force-app/main/default/objects/Cadence_Assignment_Record__c/fields/SignificantContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SignificantContactPhone__c</fullName>
    <formula>IF(NOT( ISBLANK( LeadId__c )), LeadId__r.Phone, ContactId__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignificantContactPhone</label>
    <type>Text</type>
</CustomField>