force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Which use or process created this CAR record?</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>AddToCadenceController</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>