force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What date should we use to start this record in the Cadence?</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>