force-app/main/default/objects/Cadence_Assignment_Record__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF (NOT(ISBLANK(LeadId__c))
, IF (AND(NOT(ISNULL(LeadId__r.Lead_Company__c)), NOT(ISNULL( LeadId__r.Lead_Company__r.State__c)))
,LeadId__r.Lead_Company__r.State__c, LeadId__r.State )
, IF (NOT(ISBLANK(AccountId__c)), AccountId__r.BillingState , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>