force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Suggested_User__c.field-meta.xml
<CustomField>
    <fullName>Suggested_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SuggestedUser</relationshipName>
    <type>Lookup</type>
</CustomField>