force-app/main/default/objects/Cadence_Assignment_Record__c/fields/Touchpoint_Created_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Created_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Touchpoint Created Successfully</label>
    <type>Checkbox</type>
</CustomField>