force-app/main/default/objects/Cadence_Assignment_Record__c/fields/User_Cadence_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Cadence_Type__c</fullName>
    <description>Cadence type of the Created By User</description>
    <formula>CreatedBy.User_Cadence_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cadence type of the Created By User</inlineHelpText>
    <label>User Cadence Type</label>
    <type>Text</type>
</CustomField>