force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Closed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Program__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cadence__c</field>
        <operation>contains</operation>
        <value>NSS</value>
    </filters>
    <label>All</label>
</ListView>