force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/Latest_Touchpoint.listView-meta.xml
<ListView>
    <fullName>Latest_Touchpoint</fullName>
    <columns>NAME</columns>
    <columns>CadenceObject__c</columns>
    <columns>Cadence__c</columns>
    <columns>Started__c</columns>
    <columns>Closed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>ParentZipCode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>NbrOfTouchpoints__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Latest Touchpoint</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>