force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/MMS_Mid_Market_to_NSS_S2P_Cadence_Assignment_Record.listView-meta.xml
<ListView>
    <fullName>MMS_Mid_Market_to_NSS_S2P_Cadence_Assignment_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>MMS Mid-Market to NSS S2P</label>
    <queue>MMS_Mid_Market_to_NSS_S2P</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>