force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/NSS_Outbound_Current_Client_HNBF_Cadence_Assignment_Record.listView-meta.xml
<ListView>
    <fullName>NSS_Outbound_Current_Client_HNBF_Cadence_Assignment_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>NSS Outbound Current Client HNBF</label>
    <queue>NSS_Outbound_Current_Client_HNBF</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>