force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/NSS_Outbound_Prospect_Tier_2_Cadence_Assignment_Record.listView-meta.xml
<ListView>
    <fullName>NSS_Outbound_Prospect_Tier_2_Cadence_Assignment_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>NSS Outbound Prospect Tier 2</label>
    <queue>NSS_Outbound_Prospect_Tier_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>