force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/Referral_Accounts.listView-meta.xml
<ListView>
    <fullName>Referral_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Closed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Program__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReferralAccount__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Referral Accounts</label>
</ListView>