force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/Send_to_Partner.listView-meta.xml
<ListView>
    <fullName>Send_to_Partner</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Save_Destination__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination_Detail__c</field>
        <operation>equals</operation>
        <value>Assigned to Rep,Assigned via Segmentation</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/11/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>Save_Destination__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Send to Partner</label>
</ListView>