force-app/main/default/objects/Cadence_Assignment_Record__c/listViews/Send_to_Partner_Test_Queue_Cadence_Assignment_Record.listView-meta.xml
<ListView>
    <fullName>Send_to_Partner_Test_Queue_Cadence_Assignment_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>Send to Partner Test Queue</label>
    <queue>Send_to_Partner_Test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>